src/App.css
.file-link:hover {
  text-decoration: underline;
  cursor: pointer;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}



:root {
  font-size: 16px;
  /*font-family: 'Open Sans';*/
  --text-primary: #b6b6b6;
  --text-secondary: #ececec;
  --bg-primary: #23232e;
  --bg-secondary: #141418;
  --transition-speed: 600ms;
}

body {
  color: black;
  background-color: white;
  margin: 0;
  padding: 0;
}

.scrollable::-webkit-scrollbar {
  width: 0.5rem;
  height: 0.5rem;
}

.scrollable::-webkit-scrollbar-track {
  background: #1e1e24;
}

.scrollable::-webkit-scrollbar-thumb {
  background: #6649b8;
}

.main {
  width: 100%;
  height: 100vh;
}

.header {
  height: 5rem;
  position: fixed;
  width: 100%;
}

.topnavbar {
  display: flex;
  height: 100%;
  padding:0 2rem;
  align-items: center;
}

.topnavbar>.brand {
  color: aquamarine;
  font-size: 2rem;
}

.search-box.hide {
  display: none;
}

.jar-container {
  box-sizing: border-box;
  padding-top: 5rem;
  display: flex;
  background-color: var(--bg-primary);
  height: 100vh;
}

.foldernav {
  width: 5rem;
  transition: width 600ms ease, background-color 600ms ease;
  color: var(--text-primary);
  overflow-y: scroll;
  overflow-x: hidden;
  /*height: 100vh;*/
  height: 100%;
  background-color: black;

  position: fixed;
  z-index: 2;
}

.foldernav:hover {
  width: 40vw;
  background-color: #6649b8;
}

.foldernav-nav {
  list-style: none;
  padding: 0;
  margin: 0;
  display: flex;
  flex-direction: column;
  height: 100%;
  /*overflow: hidden;*/
  white-space: nowrap;
}

.tree-view ul {
  list-style-type: none;
}

.mainUL {
  padding: 0;
  margin: 0;
}

.caret {
  cursor: pointer;
  user-select: none; /* Prevent text selection */
}
.caret::before {
  content: "\25B6";
  color: black;
  display: inline-block;
  margin-right: 6px;
}
.caret-down::before {
  transform: rotate(90deg);
}
.nested {
  display: none;
}
.active {
  display: block;
}

.code-file-link:hover {
  text-decoration: underline;
  cursor: pointer;
}

.codewindow {
  display: flex;
  width:100%;
  height: 100%;
  box-sizing: border-box;

  padding-left: 5rem;
}

#code-file {
  flex: 1;
  box-sizing: border-box;
  /*height: 100%;*/
}

.search-container {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 10;
  background-color: rgb(0, 0, 0, 0.6);
  display: flex;
  flex-direction: column;
}

.search-container.hide {
  display: none;
}

.close-btn {
  border: none;
  display: inline-block;
  padding: 8px;
  vertical-align: middle;
  overflow: hidden;
  text-decoration: none;
  color: inherit;
  background-color: aquamarine;
  text-align: center;
  cursor: pointer;
  white-space: nowrap;

  width: 30px;
  height: 30px;

  display: flex;
  align-items: center;
  justify-content: center;
  
  /*border-bottom-right-radius: 5px;
  border-radius: 50%;
  margin:10px;*/
}

.pos-top-right {
  position: absolute;
  right: 0;
  top: 0;
  border-bottom-left-radius: 5px
}

.pos-top-left {
  position: absolute;
  left: 0;
  top: 0;
  border-bottom-right-radius: 5px
}

.search-container>.search-box {
  padding: 3rem 0;
}

.search-box {
  display: flex;
  justify-content: center;
  width: 100%;
  /*filter: blur(8px);
  -webkit-filter: blur(8px);*/
}

.search-input {
  width: 100%;
  max-width: 60vw;
  height: 2rem;
  padding: 5px 15px;
  border-radius: 5px 0 0 5px;
}

.search-btn {
  border-radius: 0 5px 5px 0;
}

.search-result {
  background-color: aliceblue;
  height: 100%;
  margin: 0 10% 10px 10%;
  border-radius: 5px;
}

.search-result>ul>li {
  color: blueviolet;
}
.search-result>ul>li:hover {
  text-decoration: underline;
  color: blueviolet;
  cursor: pointer;
}

